@@ -130,13 +130,10 @@ public class XSDDateTime extends AbstractDateTime {
      */
     private static int[] convertCalendar(Calendar date) {
         int[] data = new int[TOTAL_SIZE];
-        int offset = date.get(Calendar.ZONE_OFFSET) + date.get(Calendar.DST_OFFSET);
-                                        //  Thanks to Greg Shueler for pointing out need for DST offset
-        Calendar cal = date;
-        if (offset != 0) {
-            cal = (Calendar)date.clone();
-            cal.add(Calendar.MILLISECOND, -offset);
-        }
+        
+        Calendar cal = (Calendar)date.clone();
+        cal.setTimeZone(TimeZone.getTimeZone("GMT"));   // Rebase to GMT.
+        
         data[AbstractDateTime.CY] = cal.get(Calendar.YEAR);
         data[AbstractDateTime.M] = cal.get(Calendar.MONTH) + 1;
         data[AbstractDateTime.D] = cal.get(Calendar.DAY_OF_MONTH);
